@@ -5,10 +5,9 @@ Readme.markdown
 bin/stratus
 examples/dev-blog/StratusSite
 examples/dev-blog/config/content.yaml
-examples/dev-blog/config/defaults/article.html
-examples/dev-blog/config/defaults/content.html
-examples/dev-blog/config/defaults/page.html
-examples/dev-blog/config/defaults/post.html
+examples/dev-blog/config/defaults/article.default.html
+examples/dev-blog/config/defaults/page.default.html
+examples/dev-blog/config/defaults/post.default.html
 examples/dev-blog/config/site.yaml
 examples/dev-blog/content/articles/animating-nsviews-in-rubycocoa/awake_from_nib.rb
 examples/dev-blog/content/articles/animating-nsviews-in-rubycocoa/ib_action.rb
@@ -65,16 +64,24 @@ lib/stratus/tags/markdown.rb
 lib/stratus/tags/sourcecode.rb
 lib/stratus/tags/textile.rb
 lib/stratus/tasks/app/boilerplate/StratusSite
+lib/stratus/tasks/app/boilerplate/config/content.yaml
 lib/stratus/tasks/app/boilerplate/config/defaults/page.default.html
 lib/stratus/tasks/app/boilerplate/config/defaults/post.default.html
 lib/stratus/tasks/app/boilerplate/config/site.yaml
 lib/stratus/tasks/app/boilerplate/content/pages/home/index.html
+lib/stratus/tasks/app/boilerplate/content/posts/001_welcome/index.html
+lib/stratus/tasks/app/boilerplate/content/posts/002_getting-started/index.html
+lib/stratus/tasks/app/boilerplate/themes/default/images/footer-bg.png
+lib/stratus/tasks/app/boilerplate/themes/default/images/page-bg.png
+lib/stratus/tasks/app/boilerplate/themes/default/scripts/site.js
 lib/stratus/tasks/app/boilerplate/themes/default/styles/main.css
 lib/stratus/tasks/app/boilerplate/themes/default/templates/layouts/main.html
-lib/stratus/tasks/app/boilerplate/themes/default/templates/objects/page.html
-lib/stratus/tasks/app/boilerplate/themes/default/templates/objects/page.index.html
-lib/stratus/tasks/app/boilerplate/themes/default/templates/objects/post.html
-lib/stratus/tasks/app/boilerplate/themes/default/templates/objects/post.index.html
+lib/stratus/tasks/app/boilerplate/themes/default/templates/pages/content.html
+lib/stratus/tasks/app/boilerplate/themes/default/templates/pages/feed.xml
+lib/stratus/tasks/app/boilerplate/themes/default/templates/pages/list.html
+lib/stratus/tasks/app/boilerplate/themes/default/templates/posts/content.html
+lib/stratus/tasks/app/boilerplate/themes/default/templates/posts/feed.xml
+lib/stratus/tasks/app/boilerplate/themes/default/templates/posts/list.html
 lib/stratus/tasks/app/site.rake
 lib/stratus/tasks/shared/system.rake
 lib/stratus/tasks/site/new.rake
@@ -82,32 +89,4 @@ lib/stratus/tasks/site/site.rake
 lib/stratus/tasks/site/theme.rake
 lib/stratus/version.rb
 stratus.gemspec
-test/fixtures/site/StratusSite
-test/fixtures/site/config/defaults/article.default.html
-test/fixtures/site/config/defaults/content.default.html
-test/fixtures/site/config/defaults/page.default.html
-test/fixtures/site/config/defaults/post.default.html
-test/fixtures/site/config/site.yaml
-test/fixtures/site/content/articles/001_im-the-title/index.html
-test/fixtures/site/content/pages/about/index.html
-test/fixtures/site/content/pages/home/index.html
-test/fixtures/site/content/pages/projects/index.html
-test/fixtures/site/content/posts/001_new-blog/dom.js
-test/fixtures/site/content/posts/001_new-blog/index.html
-test/fixtures/site/content/posts/001_new-blog/old.html
-test/fixtures/site/content/posts/002_fun-for-the-whole-family/index.html
-test/fixtures/site/content/posts/002_fun-for-the-whole-family/snippet_one.rb
-test/fixtures/site/content/posts/003_life-is-quite-fun-really/index.html
-test/fixtures/site/themes/default/scripts/code_highlighter.js
-test/fixtures/site/themes/default/scripts/code_syntax.js
-test/fixtures/site/themes/default/styles/code_syntax.css
-test/fixtures/site/themes/default/styles/main.css
-test/fixtures/site/themes/default/templates/layouts/main.html
-test/fixtures/site/themes/default/templates/objects/article.html
-test/fixtures/site/themes/default/templates/objects/article.index.html
-test/fixtures/site/themes/default/templates/objects/feed.xml
-test/fixtures/site/themes/default/templates/objects/page.html
-test/fixtures/site/themes/default/templates/objects/page.index.html
-test/fixtures/site/themes/default/templates/objects/post.html
-test/fixtures/site/themes/default/templates/objects/post.index.html
 test/test_helper.rb
