@@ -4,7 +4,7 @@ class Content < Base
   
   def validate!
     raise StandardError.new("Posts must have a publish-date! #{content_path}") if (!metadata.has_key?(:publish_date) and collection_type == 'posts')
-    
+#    pp self
     # return false if it's future dated...
     [(metadata[:publish_date] < Time.now), "Publish date is in the future..."]
   end
